--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -4,4 +4,7 @@
   background-color: #1a1b21;
   border-radius: 10px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Inter", sans-serif;
 }
