--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,4 @@
 @import url(./components/Card/Card.module.css);
 @import url(./components/Image/Image.module.css);
 @import url(./components/Intro/Intro.module.css);
+@import url(./components/LinkedinButton/LinkedinButton.module.css);
