--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,9 @@
 .footer {
+  align-self: flex-end;
   background: #161619;
   border-radius: 0px 0px 10px 10px;
   width: 317px;
-  height: 64px;
+  height: 70px;
   margin-top: 24px;
   display: flex;
   justify-content: center;
